LogOutput/manifests/deployment-persistent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-logs
          emptyDir: { }
      containers:
        - name: logwatcher
          image: mikkolep/logwatcher:v3
          volumeMounts:
            - name: shared-logs
              mountPath: /usr/src/app/files
        - name: timestampgenerator
          image: mikkolep/timestampgenerator:v2
          volumeMounts:
            - name: shared-logs
              mountPath: /usr/src/app/files
